--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,7 +58,7 @@
 <div class="container-style gedf-wrapper col-12 pt-1">
 
     <div class="col-org d-flex m-2">
-        <div class="gedf-main col-12 col-md-8">
+        <div class="gedf-main col-12 col-md-7 m-auto">
 
             <!--- \\\\\\\Post-->
             <div class="card gedf-card">
@@ -97,19 +97,6 @@
 
         </div>
 
-
-        <div id= "users-form" class="card col-md-3 m-auto mt-0">
-            <h5 class="card-header bg-dark bg-gradient text-light row-2">Utilisateurs</h5>
-            <div id="list-style" class="mb-2">
-                <h2 class="form-title">Admins</h2>
-                <ul id="adminList" class="list-unstyled">
-                </ul>
-
-                <h2 class="form-title">Utilisateurs</h2>
-                <ul id="usersList" class="list-unstyled">
-                </ul>
-            </div>
-        </div>
     </div>
 
 
