--- a/frontend/accountModify.html
+++ b/frontend/accountModify.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Groupomania | Modifier mon profil</title>
-    <meta name="description" content="Bienvenue sur Groupomania. Veuillez vous connecter.">
+    <meta name="description" content="Modifiez les infos de votre profil Groupomania.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/style.css">
