--- a/frontend/indexImages.html
+++ b/frontend/indexImages.html
@@ -2,8 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <title>Groupomania | Connectez-vous</title>
-    <meta name="description" content="Bienvenue sur Groupomania. Veuillez vous connecter.">
+    <title>Groupomania || Images</title>
+    <meta name="description" content="Bienvenue sur Groupomania ! Partagez vos images avec vos collègues.">
     <meta name="viewport" content="width=device-width">
 
     <link rel="stylesheet" href="css/style.css">
