--- a/frontend/message.html
+++ b/frontend/message.html
@@ -2,8 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <title>Groupomania | Connectez-vous</title>
-    <meta name="description" content="Bienvenue sur Groupomania. Veuillez vous connecter.">
+    <title>Groupomania | Modifiez votre message</title>
+    <meta name="description" content="Modifiez le message que vous souhaitez partager sur Groupomania">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="css/style.css">
