--- a/frontend/tokenExpired.html
+++ b/frontend/tokenExpired.html
@@ -2,8 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <title>Groupomania | Connectez-vous</title>
-    <meta name="description" content="Bienvenue sur Groupomania. Veuillez vous connecter.">
+    <title>Groupomania | Oops... </title>
+    <meta name="description" content="Il semble qu'il y ai un problème sur le site Groupomania...">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="css/style.css">
