--- a/frontend/account.html
+++ b/frontend/account.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Groupomania | Mon profil</title>
-    <meta name="description" content="Bienvenue sur votre profil Groupomania ! Partagez vos infos avec vos collègues.">
+    <meta name="description" content="Bienvenue sur Groupomania. Veuillez vous connecter.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/style.css">
