--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <title>Groupomania || Accueil</title>
-    <meta name="description" content="Bienvenue sur Groupomania ! Discutez avec vos collègues.">
+    <title>Groupomania | Connectez-vous</title>
+    <meta name="description" content="Bienvenue sur Groupomania. Veuillez vous connecter.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/style.css">
